--- a/Arcana.asmdef
+++ b/Arcana.asmdef
@@ -4,7 +4,8 @@
         "UnboundLib",
         "ModdingUtils",
         "ModsPlus",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "RarityLib"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
