Implemented `The Tower` and `The Empress`
- `The Sun` now only scales with damage
- `The Magician` no longer targets respawning players

--- a/Arcana.asmdef
+++ b/Arcana.asmdef
@@ -20,7 +20,8 @@
         "Photon3Unity3D.dll",
         "PhotonUnityNetworking.dll",
         "PhotonUnityNetworking.Utilities.dll",
-        "SonigonAudioEngine.Runtime.dll"
+        "SonigonAudioEngine.Runtime.dll",
+        "Sirenix.OdinInspector.Attributes.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": []
