Added `The Chariot`, `Justice`, and `The Lovers`

--- a/Arcana.asmdef
+++ b/Arcana.asmdef
@@ -5,7 +5,8 @@
         "ModdingUtils",
         "ModsPlus",
         "Unity.TextMeshPro",
-        "RarityLib"
+        "RarityLib",
+        "CardChoiceSpawnUniqueCardPatch"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
